Ingress/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: nginx-ing
    namespace: default
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    ingressClassName: < ENTER CORRECT INGRESS CLASS NAME >
    rules:
      - host: ingress-nginx.centralindia.cloudapp.azure.com
        http:
          paths:
            - pathType: Exact
              backend:
                service:
                  name: nginx-service
                  port:
                    number: 8080
              path: /my-app
